--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -291,6 +291,7 @@
           <div class="nav">
             <button class="active" data-tab="config"><span>配置</span><span class="hint">/admin/config</span></button>
             <button data-tab="test"><span>测试</span><span class="hint">/v1/messages</span></button>
+            <button data-tab="logs"><span>日志</span><span class="hint">last 100</span></button>
             <button data-tab="docs"><span>文档</span><span class="hint">内置</span></button>
             <button data-tab="copy"><span>复制文档</span><span class="hint">一键复制</span></button>
           </div>
@@ -425,6 +426,31 @@
                 </div>
                 <div style="height: 10px"></div>
                 <div class="status" id="testOutput">—</div>
+              </div>
+            </section>
+          </div>
+
+          <div class="pane" id="pane-logs">
+            <section class="subcard">
+              <div class="hd"><h2>最近请求</h2><div class="small">仅记录 /v1/messages、/v1/models（默认脱敏）</div></div>
+              <div class="bd">
+                <div class="btns">
+                  <button class="btn primary" id="btnLogsRefresh">刷新</button>
+                  <button class="btn" id="btnLogsToggleAuto">自动刷新: 关</button>
+                  <button class="btn" id="btnLogsCopySelected">复制当前详情 JSON</button>
+                </div>
+                <div style="height: 10px"></div>
+
+                <div style="display:grid; grid-template-columns: 1fr 1fr; gap: 12px; align-items: start;">
+                  <div>
+                    <div class="status" id="logsStatus">—</div>
+                    <div style="height: 10px"></div>
+                    <div class="status" id="logsList" style="max-height: 520px; overflow:auto; white-space: normal;"></div>
+                  </div>
+                  <div>
+                    <div class="status" id="logsDetail" style="min-height: 560px; overflow:auto;"></div>
+                  </div>
+                </div>
               </div>
             </section>
           </div>
@@ -648,7 +674,7 @@
       function switchTab(tabId) {
         const buttons = document.querySelectorAll(".nav button");
         buttons.forEach((b) => b.classList.toggle("active", b.dataset.tab === tabId));
-        ["config", "test", "docs", "copy"].forEach((t) => {
+        ["config", "test", "logs", "docs", "copy"].forEach((t) => {
           const pane = document.getElementById(`pane-${t}`);
           if (pane) pane.classList.toggle("active", t === tabId);
         });
@@ -715,6 +741,122 @@
 
       loadSession();
       loadConfig().catch((e) => ($("saveStatus").textContent = String(e)));
+
+      // Logs UI
+      let logsAutoTimer = null;
+      let logsItems = [];
+      let logsSelectedId = "";
+
+      function fmtLine(it) {
+        const t = it && it.time ? it.time.replace("T", " ").replace("Z", "") : "";
+        const status = it && it.status != null ? String(it.status) : "?";
+        const dur = it && it.durationMs != null ? `${it.durationMs}ms` : "";
+        const method = it && it.method ? it.method : "";
+        const path = it && it.path ? it.path : "";
+        return `${t}  ${status}  ${dur}  ${method} ${path}`;
+      }
+
+      function renderLogsList() {
+        const box = $("logsList");
+        if (!logsItems.length) {
+          box.textContent = "(empty)";
+          return;
+        }
+        box.innerHTML = "";
+        const wrap = document.createElement("div");
+        wrap.style.display = "grid";
+        wrap.style.gap = "6px";
+        for (const it of logsItems.slice().reverse()) {
+          const btn = document.createElement("button");
+          btn.type = "button";
+          btn.className = "btn";
+          btn.style.width = "100%";
+          btn.style.borderRadius = "12px";
+          btn.style.padding = "10px";
+          btn.style.fontFamily = '"Cascadia Mono", "Consolas", monospace';
+          btn.style.fontSize = "11px";
+          btn.style.fontWeight = "700";
+          btn.style.textAlign = "left";
+          btn.style.whiteSpace = "nowrap";
+          btn.style.overflow = "hidden";
+          btn.style.textOverflow = "ellipsis";
+          btn.textContent = fmtLine(it);
+          if (it.id === logsSelectedId) {
+            btn.style.borderColor = "rgba(10, 107, 92, 0.45)";
+            btn.style.background = "rgba(10, 107, 92, 0.08)";
+          }
+          btn.addEventListener("click", () => {
+            logsSelectedId = it.id;
+            renderLogsList();
+            renderLogsDetail(it);
+          });
+          wrap.appendChild(btn);
+        }
+        box.appendChild(wrap);
+      }
+
+      function renderLogsDetail(it) {
+        const box = $("logsDetail");
+        if (!it) {
+          box.textContent = "(select an item)";
+          return;
+        }
+        box.textContent = JSON.stringify(it, null, 2);
+      }
+
+      async function refreshLogs() {
+        $("logsStatus").textContent = "loading…";
+        const res = await fetch("/debug/requests?limit=100", { cache: "no-store" });
+        if (!res.ok) {
+          const t = await res.text();
+          $("logsStatus").textContent = `加载失败 HTTP ${res.status}: ${t}`;
+          return;
+        }
+        const data = await res.json();
+        logsItems = (data && Array.isArray(data.items)) ? data.items : [];
+        $("logsStatus").textContent = `ok (${logsItems.length})`;
+        if (!logsSelectedId && logsItems.length) {
+          logsSelectedId = logsItems[logsItems.length - 1].id;
+          renderLogsDetail(logsItems[logsItems.length - 1]);
+        } else {
+          const found = logsItems.find((x) => x && x.id === logsSelectedId);
+          if (found) renderLogsDetail(found);
+        }
+        renderLogsList();
+      }
+
+      function setAuto(on) {
+        if (logsAutoTimer) {
+          clearInterval(logsAutoTimer);
+          logsAutoTimer = null;
+        }
+        if (on) {
+          logsAutoTimer = setInterval(() => {
+            refreshLogs().catch(() => {});
+          }, 3000);
+        }
+        $("btnLogsToggleAuto").textContent = `自动刷新: ${on ? "开" : "关"}`;
+      }
+
+      $("btnLogsRefresh").addEventListener("click", () => refreshLogs().catch((e) => {
+        $("logsStatus").textContent = String(e);
+      }));
+      $("btnLogsToggleAuto").addEventListener("click", () => {
+        setAuto(!logsAutoTimer);
+      });
+      $("btnLogsCopySelected").addEventListener("click", async () => {
+        const found = logsItems.find((x) => x && x.id === logsSelectedId);
+        if (!found) {
+          $("logsStatus").textContent = "没有选中的记录";
+          return;
+        }
+        const txt = JSON.stringify(found, null, 2);
+        const ok = await copyText(txt);
+        $("logsStatus").textContent = ok ? "已复制" : "复制失败";
+      });
+
+      // preload once
+      refreshLogs().catch(() => {});
     </script>
   </body>
 </html>
