--- a/src/ui/admin.html
+++ b/src/ui/admin.html
@@ -292,6 +292,7 @@
             <button class="active" data-tab="config"><span>配置</span><span class="hint">/admin/config</span></button>
             <button data-tab="test"><span>测试</span><span class="hint">/v1/messages</span></button>
             <button data-tab="logs"><span>日志</span><span class="hint">last 100</span></button>
+            <button data-tab="keys"><span>Key 管理</span><span class="hint">OpenAI/Claude</span></button>
             <button data-tab="docs"><span>文档</span><span class="hint">内置</span></button>
             <button data-tab="copy"><span>复制文档</span><span class="hint">一键复制</span></button>
           </div>
@@ -451,6 +452,22 @@
                     <div class="status" id="logsDetail" style="min-height: 560px; overflow:auto;"></div>
                   </div>
                 </div>
+              </div>
+            </section>
+          </div>
+
+          <div class="pane" id="pane-keys">
+            <section class="subcard">
+              <div class="hd"><h2>Key 管理</h2><div class="small">按 key 绑定协议形态 (OpenAI / Claude)</div></div>
+              <div class="bd">
+                <div class="btns">
+                  <button class="btn primary" id="btnKeysAdd">新增 Key</button>
+                  <button class="btn primary" id="btnKeysSave">保存 Key 配置</button>
+                </div>
+                <div style="height: 10px"></div>
+                <div class="status" id="keysStatus">—</div>
+                <div style="height: 10px"></div>
+                <div class="status" id="keysEditor" style="min-height: 320px"></div>
               </div>
             </section>
           </div>
@@ -674,7 +691,7 @@
       function switchTab(tabId) {
         const buttons = document.querySelectorAll(".nav button");
         buttons.forEach((b) => b.classList.toggle("active", b.dataset.tab === tabId));
-        ["config", "test", "logs", "docs", "copy"].forEach((t) => {
+        ["config", "test", "logs", "keys", "docs", "copy"].forEach((t) => {
           const pane = document.getElementById(`pane-${t}`);
           if (pane) pane.classList.toggle("active", t === tabId);
         });
@@ -857,6 +874,134 @@
 
       // preload once
       refreshLogs().catch(() => {});
+
+      // Keys UI
+      let keysData = [];
+
+      function buildKeyRow(k, idx) {
+        const wrap = document.createElement("div");
+        wrap.style.display = "grid";
+        wrap.style.gridTemplateColumns = "1.2fr 1fr 1fr 1fr 1fr";
+        wrap.style.gap = "8px";
+
+        const name = document.createElement("input");
+        name.type = "text";
+        name.placeholder = "name";
+        name.value = k.name || "";
+
+        const key = document.createElement("input");
+        key.type = "text";
+        key.placeholder = "key";
+        key.value = k.key || "";
+
+        const wrapper = document.createElement("select");
+        wrapper.innerHTML = `
+          <option value="anthropic">Claude</option>
+          <option value="openai">OpenAI</option>
+        `;
+        wrapper.value = k.wrapper || "anthropic";
+
+        const endpoints = document.createElement("input");
+        endpoints.type = "text";
+        endpoints.placeholder = "/v1/messages,/v1/responses";
+        endpoints.value = Array.isArray(k.allowedEndpoints) ? k.allowedEndpoints.join(",") : "";
+
+        const models = document.createElement("input");
+        models.type = "text";
+        models.placeholder = "allowed models (comma)";
+        models.value = Array.isArray(k.allowedModels) ? k.allowedModels.join(",") : "";
+
+        const del = document.createElement("button");
+        del.className = "btn";
+        del.textContent = "删除";
+        del.addEventListener("click", () => {
+          keysData.splice(idx, 1);
+          renderKeysEditor();
+        });
+
+        wrap.appendChild(name);
+        wrap.appendChild(key);
+        wrap.appendChild(wrapper);
+        wrap.appendChild(endpoints);
+        wrap.appendChild(models);
+
+        const row = document.createElement("div");
+        row.style.display = "grid";
+        row.style.gridTemplateColumns = "1fr auto";
+        row.style.gap = "8px";
+        row.appendChild(wrap);
+        row.appendChild(del);
+
+        row.dataset.index = String(idx);
+        row._inputs = { name, key, wrapper, endpoints, models };
+        return row;
+      }
+
+      function renderKeysEditor() {
+        const box = $("keysEditor");
+        box.innerHTML = "";
+        if (!keysData.length) {
+          box.textContent = "(empty)";
+          return;
+        }
+        for (let i = 0; i < keysData.length; i++) {
+          const row = buildKeyRow(keysData[i], i);
+          box.appendChild(row);
+        }
+      }
+
+      async function loadKeys() {
+        const res = await fetch("/admin/config");
+        if (!res.ok) {
+          $("keysStatus").textContent = `加载失败 ${res.status}`;
+          return;
+        }
+        const data = await res.json();
+        // UI expects full key list; if server doesn't expose keys, fallback to empty
+        keysData = Array.isArray(data.keys) ? data.keys : [];
+        $("keysStatus").textContent = `ok (${keysData.length})`;
+        renderKeysEditor();
+      }
+
+      function collectKeysFromUI() {
+        const rows = Array.from($("keysEditor").children);
+        const list = [];
+        for (const row of rows) {
+          const inputs = row._inputs;
+          if (!inputs) continue;
+          const name = inputs.name.value.trim();
+          const key = inputs.key.value.trim();
+          const wrapper = inputs.wrapper.value;
+          const endpoints = parseLinesOrCsv(inputs.endpoints.value).map((s) => s.trim());
+          const allowedModels = parseLinesOrCsv(inputs.models.value).map((s) => s.trim());
+          if (!key) continue;
+          list.push({ name, key, wrapper, allowedEndpoints: endpoints, allowedModels });
+        }
+        return list;
+      }
+
+      $("btnKeysAdd").addEventListener("click", () => {
+        keysData.push({ name: "", key: "", wrapper: "anthropic", allowedEndpoints: [], allowedModels: [] });
+        renderKeysEditor();
+      });
+
+      $("btnKeysSave").addEventListener("click", async () => {
+        const list = collectKeysFromUI();
+        const res = await fetch("/admin/config", {
+          method: "PUT",
+          headers: { "content-type": "application/json" },
+          body: JSON.stringify({ keys: list })
+        });
+        if (!res.ok) {
+          const t = await res.text();
+          $("keysStatus").textContent = `保存失败 ${res.status}: ${t}`;
+          return;
+        }
+        $("keysStatus").textContent = "已保存";
+        await loadKeys();
+      });
+
+      loadKeys().catch(() => {});
     </script>
   </body>
 </html>
